source/blender/blenkernel/BKE_mesh_runtime.h
@@ -109,6 +109,16 @@ struct Mesh *mesh_create_eval_final_view(
         struct Depsgraph *depsgraph, struct Scene *scene,
         struct Object *ob, CustomDataMask dataMask);
 
+struct Mesh *mesh_create_eval_no_deform(
+        struct Depsgraph *depsgraph, struct Scene *scene,
+        struct Object *ob, float (*vertCos)[3],
+        CustomDataMask dataMask);
+struct Mesh *mesh_create_eval_no_deform_render(
+        struct Depsgraph *depsgraph, struct Scene *scene,
+        struct Object *ob, float (*vertCos)[3],
+        CustomDataMask dataMask);
+
+
 void BKE_mesh_runtime_eval_to_meshkey(struct Mesh *me_deformed, struct Mesh *me, struct KeyBlock *kb);
 
 
